--- a/src/components/Login/LoginForm/LoginForm.module.css
+++ b/src/components/Login/LoginForm/LoginForm.module.css
@@ -1,13 +1,17 @@
 .container {
     position: absolute;
-    bottom: 15%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 2rem;
     height: 22rem;
+    max-height: 58%;
     width: 24rem;
+    max-width: 70%;
     background-color: #fff;
     border-radius: 16px;
 }
@@ -58,10 +62,13 @@
 .containerButton {
     display: flex;
     gap: 0.2rem;
+    width: 100%;
+    justify-content: center;
 }
 
 .containerButton button {
     width: 8rem;
+    max-width: 40%;
     height: 2.4rem;
     border: none;
     color: white;
