--- a/src/components/UI/Modal/Modal.module.css
+++ b/src/components/UI/Modal/Modal.module.css
@@ -10,7 +10,7 @@
 
 .modal {
     position: fixed;
-    top: 20vh;
+    top: 20%;
     left: 5%;
     width: 90%;
     background-color: white;
@@ -25,6 +25,12 @@
     .modal {
         width: 40rem;
         left: calc(50% - 20rem);
+    }
+}
+
+@media (max-height: 520px) {
+    .modal {
+        top: 5%;
     }
 }
 
